# Robox

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md
courses-oj/: ans.cpp
docs/: declaration_ref.mermaid
docs/dev/: core.md
src/: main.cpp
src/cli/: console.cc  console.h  terminal.cc  terminal.h
src/core/: core.cc  core.h
src/gui/: robox_main_window.cc  robox_main_window.h
test/: test1.cpp  test_console.cpp  test_core_1.cpp
